# monumental

./: .gitignore  README.md  docker-compose.yml  install.sh
backend/: Dockerfile  pyproject.toml  server.py
backend/src/crane/: crane.py  crane_service.py  crane_state.py  messages.py  models.py  motion_controller.py
backend/tests/: test_kinematics.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/components/: Controls.tsx  FormControls.tsx  MotorControls.tsx  OrientationControls.tsx  XYZPositionControl.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: index.tsx
frontend/src/threejs/: Crane.tsx
frontend/src/types/: crane.ts  messages.ts
